// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IfStatement 1`] = `
{
  "block": {
    "kind": "Block",
    "statements": [
      {
        "expression": {
          "kind": "StringLiteral",
          "value": "hello",
        },
        "kind": "ReturnStatement",
      },
    ],
  },
  "elseCase": null,
  "guard": {
    "kind": "NumberLiteral",
    "value": 3,
  },
  "kind": "IfStatement",
}
`;

exports[`IfStatement.else 1`] = `
{
  "block": {
    "kind": "Block",
    "statements": [
      {
        "expression": {
          "kind": "StringLiteral",
          "value": "hello",
        },
        "kind": "ReturnStatement",
      },
    ],
  },
  "elseCase": {
    "kind": "Block",
    "statements": [
      {
        "expression": {
          "kind": "StringLiteral",
          "value": "world",
        },
        "kind": "ReturnStatement",
      },
    ],
  },
  "guard": {
    "kind": "NumberLiteral",
    "value": 3,
  },
  "kind": "IfStatement",
}
`;

exports[`IfStatement.elseif 1`] = `
{
  "block": {
    "kind": "Block",
    "statements": [
      {
        "expression": {
          "kind": "StringLiteral",
          "value": "three",
        },
        "kind": "ReturnStatement",
      },
    ],
  },
  "elseCase": {
    "block": {
      "kind": "Block",
      "statements": [
        {
          "expression": {
            "kind": "StringLiteral",
            "value": "two",
          },
          "kind": "ReturnStatement",
        },
      ],
    },
    "elseCase": {
      "kind": "Block",
      "statements": [
        {
          "expression": {
            "kind": "StringLiteral",
            "value": "one",
          },
          "kind": "ReturnStatement",
        },
      ],
    },
    "guard": {
      "kind": "NumberLiteral",
      "value": 2,
    },
    "kind": "IfStatement",
  },
  "guard": {
    "kind": "NumberLiteral",
    "value": 3,
  },
  "kind": "IfStatement",
}
`;
